--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -1,9 +1,15 @@
 .search-box{
-    -webkit-appearance: none;
     border: none;
     outline: none;
-    padding: 10px;
-    width: 150px;
-    line-height: 30px;
+    padding: 8px;
+    width: 200px;
+    height: 35px;
+    line-height: 10px;
+    margin-top: 10px;
     margin-bottom: 30px;
+    border-radius: 2px;
+}
+.search-box::placeholder{
+    color: rgb(34, 32, 32);
+    font-style: italic;
 }
