--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -1,24 +1,8 @@
 .card-list{
     width: 80vw;
-    margin: 0px auto;;
+    margin: 0px auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
     justify-content: center;
-}
-.card-container{
-    display: flex;
-    flex-direction: column;
-    background-color: #80d9d9;
-    border: 1px solid grey;
-    border-radius: 5px;
-    padding: 25px;
-    cursor: pointer;
-    -moz-osx-font-smoothing: grayscale;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
-}
-.card-container:hover{
-    transform: scale(1.05);
 }
